# job_crawler

./: .gitignore  README.md  backup_manager.py  create_structure.bat  health_checker.py  job.py  job_site.py  main.py  monitor.py  monitoring_service.py  param_agent.py  param_job_agent.py  performance_monitor.py  pyproject.toml  quick_fix_script.py  run_tests.py  test_agent.py  test_london_job_search_agent.py  test_main.py  test_monitor.py  user_profile.py
claude_job_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: monitor.py  run_tests.py
src/claude_job_agent/: __init__.py  main.py
src/claude_job_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/claude_job_agent/core/: __init__.py  coloured_formatter.py  json_formatter.py  logging_config.py
src/claude_job_agent/monitoring/: __init__.py  backup_manager.py  config.py  health_checker.py  monitoring_service.py  performance_monitor.py
src/claude_job_agent/services/: __init__.py
src/claude_job_agent/tools/: __init__.py
tests/: __init__.py  test_main.py  test_monitoring.py
